--- a/TODO
+++ b/TODO
@@ -7,7 +7,5 @@ sort all input (instead of just assuming that it is sorted)
 automate reporting (el_scorer and exploreEM statistics)
 use vpath directive: vpath %.py src/*; vpath %.txt data
 use .DELETE_ON_ERROR for data files
-define matlab variable MATLAB
-change non user-modifiable variables to lower case
-# TODO PROBLEM: PROPPR REMOVES NAMES WITH SPECIAL CHARACTERS; POLICY?
-# (SHOULD NOT MATTER FOR EXPLORATORY VERSION -> STRING IS JUST ONE FEATURE)
+problem: proppr removes names with special characters (should not matter for 
+exploratory version -> string is just one feature)
